--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
     <dependency>
     	<groupId>javax.validation</groupId>
     	<artifactId>validation-api</artifactId>
-    	<version>1.1.0.Final</version>
+    	<version>2.0.0.Final</version>
     </dependency>
 	
 	<!-- fasterJackson -->
@@ -218,7 +218,7 @@
 	    <version>0.1.5</version>
 	</dependency>
 	
-	<!-- 获取请求头 -->
+	<!-- 获取请求头工具类-->
 	<dependency>
 	    <groupId>nl.bitwalker</groupId>
 	    <artifactId>UserAgentUtils</artifactId>
